tests/compile_fail/for_undeclared_initializer/source.c
int main(void) {
    for (i = 0; i < 3; i = i + 1) {
    }
    return 0;
}
